added an <h1> tag

--- a/hello.html
+++ b/hello.html
@@ -4,8 +4,7 @@
     <<title>Home webpage</title>
   </head>
   <<body>
-    Wecome to my webpage
-Welcome Again
+    <h1>Wecome to my webpage</h1>
 <p>I am glad to have you</p>
 
   </body>
